# SimpleFileExchanger

./: .env.example  Docker-compose.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  utils.py
alembic/: env.py
core/: config.py
db/: db.py
db/models/: file.py
repositories/: file_repository.py  s3_repository.py
routers/: files.py
schemas/: file.py
services/: file_service.py
tasks/: file_tasks.py  scheduler.py
